    dependencies, in order to minimize shared library conflicts introduced
    by SONAME changes and upgrades (mainly for Linux distribution
    packagers).

 *) The public interface for the libwebauth library now uses char *
    uniformly instead of unsigned char *, since using the latter is too
    annoying and causes too many compiler warnings.

 *) Ask the linker to be sure that all external references are defined
    when linking the Apache modules on Linux.

 *) Removed the old workaround for libgcc dependencies in libraries when
    building with a non-gcc compiler.  gcc has used a shared libgcc for a
    long time and this was always an edge case.

 *) mod_webkdc doesn't need to include cURL headers; it never uses cURL.

 *) Cleaned up lots of compiler warnings.  All of WebAuth now builds under
    gcc -Wall without warnings.

 *) Lots of general documentation updates for clarity and style.

 *) Removed some Stanford-specific parts of doc/install-webkdc since we
    don't need instructions for what to do at Stanford any more.
    Clarified the documentation slightly.

 *) Removed the Doxygen configuration and makefile targets.  Failed
    experiment.

WebAuth 3.3.0 (2005-10-04)

 *) All WebKDC support for S/Ident removed.  The S/Ident protocol is
    inherently vulnerable to an active man-in-the-middle attack that is
    particularly severe for WebAuth, since S/Ident authentication is done
    by a single server and WebAuth users regularly visit that server.
    Exploiting this protocol flaw would allow an attacker to capture a
    single sign-on cookie and then impersonate the user to all WebAuth
    sites in that domain.

 *) Added WebAuthLdapSeparator to specify the separator for multivalued
    attributes.  When set in the server configuration, all values of a
    multivalued attribute are concatenated together, separated by that
    separator, and put into the base WEBAUTH_LDAP_* environment variable
    (rather than only the first one).
