@@ -65,13 +65,6 @@
 #define CM_TokenMaxTTL "max ttl of tokens that are supposed to be \"recent\""
 #define DF_TokenMaxTTL (60*5)
 
-#define CD_SIdentAuthType "WebkdcSIdentAuthType"
-#define CM_SIdentAuthType "enable SIdent support"
-
-#define CD_SIdentTimeout "WebkdcSIdentTimeout"
-#define CM_SIdentTimeout "timeout to use with ident_query call"
-#define DF_SIdentTimeout (10)
-
 /* max number of <token>'s we will return. 64 is overkill */
 #define MAX_TOKENS_RETURNED 64
 
@@ -103,8 +96,6 @@ enum {
     E_Keytab,
     E_ProxyTokenLifetime,
     E_ServiceTokenLifetime,
-    E_SIdentAuthType,
-    E_SIdentTimeout,
     E_TokenMaxTTL,
 };
 
@@ -127,8 +118,6 @@ typedef struct {
     int keyring_auto_update_ex;
     int keyring_key_lifetime;
     int keyring_key_lifetime_ex;
-    apr_array_header_t *sident_auth_types; /* array of MWK_IDENT_AUTH_TYPE */
-    int sident_timeout;
     /* stuff we need to clean up on restarts and what not */
     WEBAUTH_KEYRING *ring; /* our keyring */
     int free_ring;         /* set if we should free ring */
@@ -142,12 +131,6 @@ typedef struct {
     char *remote_port;
     char *remote_user;
 } MWK_REQUEST_INFO;
-
-/* configured sident auth type */
-typedef struct {
-    char *type;
-    char *data;
-} MWK_IDENT_AUTH_TYPE;
 
 /* interesting stuff from a parsed webkdc-service-token */
 typedef struct {
